found some bugs in z-indexes, contact and resume page. fixed

--- a/src/static/styles/contact-desktop.css
+++ b/src/static/styles/contact-desktop.css
@@ -1,7 +1,7 @@
 @media only screen and (min-width: 1025px) {
   main {
     grid-template-columns: 100px auto 25%;
-    grid-template-rows: 8vw 200px repeat(2, auto);
+    grid-template-rows: 8vw 10vw repeat(2, auto);
     grid-template-areas: ". . top-graphic"
                          ". header top-graphic"
                          "socials form top-graphic"
@@ -27,6 +27,7 @@
     margin-left: 5vw;
     margin-right: 5vw;
     width: 50vw;
+    max-width: 600px;
   }
 }
 
