--- a/src/static/styles/global.css
+++ b/src/static/styles/global.css
@@ -65,14 +65,14 @@ nav {
   position: fixed;
   width: 100%;
   flex-direction: column;
-  z-index: 200;
+  z-index: 600;
 }
 
 .logo-hamburger {
   display: flex;
   box-shadow: var(--box-dp4);
   background-color: var(--dark-4);
-  z-index: 300;
+  z-index: 700;
 }
 
 .nav-logo {
@@ -252,7 +252,7 @@ footer {
   position: relative;
   transform: translateY(-10px);
   transition: 0.6s;
-  z-index: 80;
+  z-index: 599;
 }
 
 .drip-top-slide {
